fix list layout bugs

--- a/packages/schnauze-styles/client/sass/base/_vars.scss
+++ b/packages/schnauze-styles/client/sass/base/_vars.scss
@@ -78,6 +78,8 @@ $bp-port: "(orientation: portrait)";
 $bp-h-sm: "(min-height: 400px)";
 $bp-h-sm-below: "(max-height: 400px)";
 
+$bp-sm: "(max-width: 322px)";
+
 
 // Animation
 //============================================
