--- a/packages/schnauze-styles/client/sass/module/_list.sass
+++ b/packages/schnauze-styles/client/sass/module/_list.sass
@@ -4,3 +4,6 @@
 
 .list
   padding: $space-oneAndHalf $space-double
+
+  +mq($bp-sm)
+    padding: $space-oneAndHalf $space-threeQuarter
